re PR rtl-optimization/45792 (cris-elf build failure (hangs) due to fix for PR44374)

PR rtl-optimization/45792
	* cfgcleanup.c (try_head_merge_bb): New rtx vector nextptr.
	If not all insns are to be merged, for each edge, stash the
	next candidate after the to-be-merged insns before doing the
	merge, and use them for the retry at the new insertion point.
	Handle CC0 targets when retrying.

Co-Authored-By: Bernd Schmidt <bernds@codesourcery.com>

From-SVN: r164663